[[bin]]
name = 'tiedye'
path = 'src/main.rs'

[package]
name = 'tiedye'
version = '0.0.1'
authors = ['Tiedye Network <hi@tiedye.io>']
build = 'build.rs'
edition = '2018'

[build-dependencies]
vergen = '3'

[profile.release]
panic = 'unwind'

[workspace]
members = [
    'primitives',
    'runtime'
]

[dependencies]
derive_more = '0.14.0'
exit-future = '0.1'
futures = '0.1'
log = '0.4'
parking_lot = '0.9.0'
tokio = '0.1'
trie-root = '0.15.2'

[dependencies.babe]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.babe-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.tiedye-runtime]
path = 'runtime'

[dependencies.tiedye-primitives]
path = 'primitives'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'
