[[bin]]
name = 'tiedye'
path = 'src/main.rs'

[package]
name = 'tiedye'
version = '0.0.1'
authors = ['Tiedye Network <hi@tiedye.io>']
build = 'build.rs'
edition = '2018'

[build-dependencies]
vergen = '3'

[profile.release]
panic = 'unwind'

[workspace]
members = [
    'primitives',
    'runtime'
]

[dependencies]
derive_more = '0.14.0'
exit-future = '0.1'
futures = '0.1'
log = '0.4'
parking_lot = '0.9.0'
tokio = '0.1'
trie-root = '0.15.2'

[dependencies.babe]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.babe-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.tiedye-runtime]
path = 'runtime'

[dependencies.tiedye-primitives]
path = 'primitives'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'
