[package]
authors = ['Tiedye Network <hi@tiedye.io>']
edition = '2018'
name = 'tiedye-runtime'
version = '0.0.1'

[dependencies]
tiedye-primitives = { path = "../primitives", default-features = false }

[dependencies.app-crypto]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = "substrate-application-crypto"
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.babe]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-babe'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.babe-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-grandpa'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0'

[dependencies.session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-session'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.sr-staking-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.staking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-staking'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.substrate-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = '6d48cce29aa7bcb8c11070a400179f1188a7f620'

[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.2'

[features]
default = ['std']
no_std = []
std = [
    'codec/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'babe/std',
    'babe-primitives/std',
    'executive/std',
    'indices/std',
    'grandpa/std',
    'primitives/std',
    'sr-primitives/std',
    'session/std',
    'staking/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde',
    'safe-mix/std',
    'offchain-primitives/std',
    'substrate-session/std',
]
