[package]
authors = ['Tiedye Network <hi@tiedye.io>']
edition = '2018'
name = 'tiedye-runtime'
version = '0.0.1'

[dependencies]
tiedye-primitives = { path = "../primitives", default-features = false }

[dependencies.app-crypto]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = "substrate-application-crypto"
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.babe]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-babe'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.babe-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-grandpa'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-randomness-collective-flip'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0'

[dependencies.session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-session'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.sr-staking-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.srml-staking-reward-curve]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.staking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-staking'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.substrate-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = 'ce03f373c88e28f7d23df64f8d4e2f3588c6ca3f'

[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.2'

[features]
default = ['std']
no_std = []
std = [
    'codec/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'babe/std',
    'babe-primitives/std',
    'executive/std',
    'indices/std',
    'grandpa/std',
    'primitives/std',
    'sr-primitives/std',
    'session/std',
    'staking/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde',
    'safe-mix/std',
    'offchain-primitives/std',
    'substrate-session/std',
]
